--- a/rootdir/etc/init.samsung.rc
+++ b/rootdir/etc/init.samsung.rc
@@ -1,6 +1,6 @@
 on init
     # Disable vendor overlay
-    mount none /vendor/lost+found /vendor/overlay bind
+    mount none /dev/null /vendor/overlay bind
 
     # Override vendor usb_audio_policy_configuration
     mount none /system/etc/usb_audio_policy_configuration.xml /vendor/etc/usb_audio_policy_configuration.xml bind
