--- a/rootdir/etc/init.wifi.rc
+++ b/rootdir/etc/init.wifi.rc
@@ -86,6 +86,8 @@ on boot
     # Pcie WiFi T-put setting
     write /sys/class/net/wlan0/queues/rx-0/rps_cpus 00
 
+    start init_wifi
+
 service wpa_supplicant /system/vendor/bin/hw/wpa_supplicant -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -I/system/vendor/etc/wifi/wpa_supplicant_overlay.conf -O/data/misc/wifi/sockets -N -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf -I/system/vendor/etc/wifi/p2p_supplicant_overlay.conf -puse_p2p_group_interface=1 -puse_multi_chan_concurrent=1 -e/data/misc/wifi/entropy.bin -g@android:wpa_wlan0
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
@@ -130,3 +132,10 @@ service ftm_ptt /system/bin/ftm_ptt -d
 #    group root
 #    oneshot
 #    disabled
+
+service init_wifi /system/bin/init.wifi.sh
+    class main
+    user wifi
+    group wifi system
+    oneshot
+    disabled
